fix: body overflow issue on x-axis

--- a/assets/scss/_footer_project.scss
+++ b/assets/scss/_footer_project.scss
@@ -8,7 +8,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: -12px;
   font-family: $font-qanelas;
 
   .d-header {
