--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -66,9 +66,6 @@
   margin-top: 3rem;
 }
 
-body{
-  overflow-x: hidden;
-}
 
 // Main Middle Body
 .td-content {
